Refactor: Changed the delete button to be at the card-reveal section of the event card.

--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -42,6 +42,10 @@ nav
   font:
     size: 15px !important
 
+.card-image
+  position: relative !important
+
+
 .card-title
   @include pad(14px !important)
   font:
