--- a/template/index.html
+++ b/template/index.html
@@ -23,7 +23,8 @@
                         <p>Boots EM</p>
                     </a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i class="material-icons">search</i></a></li>
+                        <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i
+                                class="material-icons">search</i></a></li>
                         <li><a href="signin.html">Sign In</a></li>
                         <li><a href="signup.html">Sign Up</a></li>
                     </ul>
@@ -41,7 +42,8 @@
                             <p>Boots EM</p>
                         </a>
                         <ul id="nav-mobile" class="right hide-on-med-and-down">
-                            <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i class="material-icons">search</i></a></li>
+                            <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i
+                                    class="material-icons">search</i></a></li>
                             <li><a href="signin.html">Sign In</a></li>
                             <li><a href="signup.html">Sign Up</a></li>
                         </ul>
@@ -86,6 +88,10 @@
                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -106,10 +112,14 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
-                                    class="material-icons right">close</i></span>
+                                             <span class="card-title grey-text text-darken-4">A title for this event<i
+                                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -130,10 +140,14 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
-                                    class="material-icons right">close</i></span>
+                                             <span class="card-title grey-text text-darken-4">A title for this event<i
+                                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -154,10 +168,14 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
-                                    class="material-icons right">close</i></span>
+                                             <span class="card-title grey-text text-darken-4">A title for this event<i
+                                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -178,10 +196,14 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
-                                    class="material-icons right">close</i></span>
+                                             <span class="card-title grey-text text-darken-4">A title for this event<i
+                                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -202,10 +224,14 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
-                                    class="material-icons right">close</i></span>
+                                             <span class="card-title grey-text text-darken-4">A title for this event<i
+                                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -226,10 +252,14 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
-                                    class="material-icons right">close</i></span>
+                                             <span class="card-title grey-text text-darken-4">A title for this event<i
+                                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -250,10 +280,14 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
-                                    class="material-icons right">close</i></span>
+                                             <span class="card-title grey-text text-darken-4">A title for this event<i
+                                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -274,10 +308,14 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
-                                    class="material-icons right">close</i></span>
+                                             <span class="card-title grey-text text-darken-4">A title for this event<i
+                                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
+                                <a class="btn-floating right red tooltipped" data-position="left"
+                                   onclick="confirm('Do you really want to Delete this Event..?')"
+                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                </a>
                             </small>
                         </div>
                     </div>
@@ -287,36 +325,28 @@
     </div>
     <!--End popular__event_holdr-->
 
-
     <div class="parallax-container">
         <div class="parallax">
             <img src="image/5.jpg">
         </div>
         <div class="container">
             <div class="center-align">
-                <p>
-                <h4>Do you want to Manage your Own Event?</h4>
-                <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores,
-                    at aut consequuntur corporis culpa debitis dolores dolorum ducimus enim
-                    eos esse est eveniet excepturi expedita facilis illo incidunt inventore
-                </small>
-                <br/>
-                <a href="signup.html" class="btn waves-effect red darken-1">Sign Up</a>
-                </p>
+                <div class="row">
+                    <div class="col s12">
+                        <h4>Do you want to Manage your Own Event?</h4>
+                        <h5>View All Centers</h5>
+                        <br/>
+                        <a href="centers.html" class="btn waves-effect red darken-1">Centers</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="fixed-action-btn wow zoomIn">
-        <a class="btn-floating btn-large red" style="position:static;">
-            <i class="large material-icons">more_vert</i>
+        <a href="#add_event_modal" class="tooltipped modal-trigger btn-large btn-floating green" data-position="left"
+           data-tooltip="Add Event"><i class="material-icons">add</i>
         </a>
-        <ul>
-            <li><a href="#add_event_modal" class="tooltipped modal-trigger btn-floating green" data-position="left"
-                   data-tooltip="Add Event"><i class="material-icons">add</i></a></li>
-            <li><a class="btn-floating red tooltipped modal-trigger" data-position="left"
-                   data-tooltip="Delete Event"><i class="material-icons">delete</i></a></li>
-        </ul>
     </div>
 
     <div class="footer">
@@ -372,7 +402,8 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <label for="description">Description</label>
-                        <textarea id="description" type="text" class="materialize-textarea validate" required></textarea>
+                        <textarea id="description" type="text" class="materialize-textarea validate"
+                                  required></textarea>
                     </div>
                 </div>
             </form>
@@ -390,7 +421,9 @@
         <div class="container">
             <div class="row">
                 <div class="col s1">
-                    <a class="btn btn-flat white waves-effect search__back_btn" style="height: 64px;padding-top: 12px;padding-bottom: 12px;"><i class="material-icons">arrow_back</i></a>
+                    <a class="btn btn-flat white waves-effect search__back_btn"
+                       style="height: 64px;padding-top: 12px;padding-bottom: 12px;"><i
+                            class="material-icons">arrow_back</i></a>
                 </div>
                 <div class="col s11">
                     <nav>
@@ -398,7 +431,8 @@
                             <form method="post">
                                 <div class="input-field" style="margin-top: 0 !important;">
                                     <input id="search" type="search" placeholder="Search" required>
-                                    <label class="label-icon" for="search"><i class="material-icons" style="margin-top: -12px !important;color: #CCC;">search</i></label>
+                                    <label class="label-icon" for="search"><i class="material-icons"
+                                                                              style="margin-top: -12px !important;color: #CCC;">search</i></label>
                                     <i class="material-icons" style="color: #FFF;">close</i>
                                 </div>
                             </form>
@@ -428,10 +462,10 @@
             outDuration: 200, // Transition out duration
             startingTop: '4%', // Starting top style attribute
             endingTop: '10%', // Ending top style attribute
-            ready: function(modal, trigger) { // Callback for Modal open. Modal and trigger parameters available.
+            ready: function (modal, trigger) { // Callback for Modal open. Modal and trigger parameters available.
                 $('.body__holdr').addClass('blur__fits');
             },
-            complete: function() {
+            complete: function () {
                 $('.body__holdr').removeClass('blur__fits');
                 $('.modal-overlay').css({'display': 'none'});
                 this.removeClass('search__pane');
