--- a/template/css/app.css
+++ b/template/css/app.css
@@ -46,6 +46,9 @@ nav {
   margin-top: 5px !important;
   font-size: 15px !important; }
 
+.card-image {
+  position: relative !important; }
+
 .card-title {
   padding: 14px !important;
   font-size: 20px !important; }
