--- a/template/css/app.sass
+++ b/template/css/app.sass
@@ -13,6 +13,9 @@
 /*main css*/
 @import 'main-css/main'
 
+/*center details css*/
+@import 'center-css/center'
+
 /*signin css*/
 @import 'signin-css/signin'
 
