--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Event Manager</title>
+    <title>Boots Event Manager</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/frameworks/ghpages-materialize.css">
     <link href="css/frameworks/micon.css" rel="stylesheet">
@@ -336,7 +336,7 @@
                         <h4>Do you want to Manage your Own Event?</h4>
                         <h5>View All Centers</h5>
                         <br/>
-                        <a href="centers.html" class="btn waves-effect red darken-1">Centers</a>
+                        <a href="center-details.html" class="btn waves-effect red darken-1">Centers</a>
                     </div>
                 </div>
             </div>
