refactor: Added price tag to about center details list, indicating the price of the center.

--- a/template/center-details.html
+++ b/template/center-details.html
@@ -43,7 +43,7 @@
                         <p><i class="material-icons f15">location_on</i>64, Idimu Road, Opposite Gowon Estate, Mokola Bus Stop, Egbeda, Alimosho, Lagos</p>
                         <div class="divider"></div>
                         <section>
-                            <h5>About this Venue</h5>
+                            <h5>About this Center</h5>
                             <p>The Lighthouse Event Center small hall offers a beautiful, spacious, and elegant venue, with seating capacity for 220 guests dinner style. This small hall can serve as a venue for weddings, parties, special events etc.</p>
                             <div class="divider"></div>
                             <div class="row">
@@ -52,6 +52,15 @@
                                 </div>
                                 <div class="col s8">
                                     <p>Optimum <span>200</span> - Maximum <span>300</span></p>
+                                </div>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="row">
+                                <div class="col s4">
+                                    <p>Price</p>
+                                </div>
+                                <div class="col s8">
+                                    <p><span>₦200,000.00</span> per event</p>
                                 </div>
                             </div>
                             <div class="divider"></div>
