style: completed center-details page, center  listing and center modification form.

--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -79,5 +79,5 @@ nav
   background:
     color: $white !important
 
-#add_event_modal
-  width: 40% !important
+.carousel .carousel-item
+  visibility: inherit !important
