--- a/template/center-details.html
+++ b/template/center-details.html
@@ -38,8 +38,14 @@
         <div class="center__holdr">
             <div class="row">
                 <div class="col s12 l8">
-                    <div class="center__details z-depth-0">
+                    <div class="center__details">
                         <h4>Lighthouse Event Center Small Hall</h4>
+                        <div class="slider__holdr">
+                            <div class="carousel carousel-slider">
+                                <a class="carousel-item" href="#one!"><img src="image/1.jpg"></a>
+                            </div>
+                            <!--<img src="image/3.jpg" alt="Lighthouse Event Center Small Hall">-->
+                        </div>
                         <p><i class="material-icons f15">location_on</i>64, Idimu Road, Opposite Gowon Estate, Mokola Bus Stop, Egbeda, Alimosho, Lagos</p>
                         <div class="divider"></div>
                         <section>
@@ -69,35 +75,248 @@
                                     <p>Facilities</p>
                                 </div>
                                 <div class="col s8">
-                                    <ul>
+                                    <ul class="facility__list">
                                         <li><i class="material-icons"></i>Chair</li>
                                         <li><i class="material-icons"></i>Security</li>
-                                        <li><i class="material-icons"></i>Air</li>
-                                        <li><i class="material-icons"></i>Conditioner</li>
-                                        <li><i class="material-icons"></i>Table</li>
-                                        <li><i class="material-icons"></i>Changing</li>
-                                        <li><i class="material-icons"></i>Room</li>
-                                        <li><i class="material-icons"></i>Parking</li>
-                                        <li><i class="material-icons"></i>Space</li>
-                                        <li><i class="material-icons"></i>Stage</li>
-                                        <li><i class="material-icons"></i>Lighting</li>
+                                        <li><i class="material-icons"></i>Air Conditioner</li>
+                                        <li><i class="material-icons"></i>Tables</li>
+                                        <li><i class="material-icons"></i>Changing Room</li>
+                                        <li><i class="material-icons"></i>Parking Space</li>
+                                        <li><i class="material-icons"></i>Stage Lighting</li>
                                         <li><i class="material-icons"></i>Power</li>
                                         <li><i class="material-icons"></i>Generator</li>
-                                        <li><i class="material-icons"></i>Rest</li>
-                                        <li><i class="material-icons"></i>Room</li>
+                                        <li><i class="material-icons"></i>Rest Room</li>
                                         <li><i class="material-icons"></i>Television</li>
                                     </ul>
-
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col s12">
+                                    <!--<a href="#" class="center-align btn btn-large waves-effect">Book this center</a>-->
+                                    <a href="#edit_center_modal" class="center-align modal-trigger btn btn-large waves-effect">Edit this center</a>
                                 </div>
                             </div>
                         </section>
                     </div>
                 </div>
                 <div class="col s12 l4">
-
+                    <p><h6>Events hosted by this center</h6></p>
+                    <div class="divider"></div>
+                    <section>
+                        <div class="row">
+                            <div class="col s12 l12">
+                                <div class="card wow fadeInUp">
+                                    <div class="card-image">
+                                        <a href="">
+                                            <img src="image/2.jpg">
+                                            <span class="card-title">A title for this event</span>
+                                        </a>
+                                        <a class="btn-floating halfway-fab waves-effect waves-light red tooltipped"
+                                           data-position="bottom" data-tooltip="share">
+                                            <i class="material-icons">share</i>
+                                        </a>
+                                    </div>
+                                    <div class="card-content activator">
+                                        <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                                        <small><i class="material-icons f15">location_on</i> Muson center, Lagos <i
+                                                class="material-icons right pointer">more_vert</i></small>
+                                    </div>
+                                    <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a href="">A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                                        <small>Here is some more information about this product that is only revealed once clicked
+                                            on.
+                                            <a class="btn-floating right red tooltipped" data-position="left"
+                                               onclick="confirm('Do you really want to Delete this Event..?')"
+                                               data-tooltip="Delete Event"><i class="material-icons">delete</i>
+                                            </a>
+                                        </small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="row">
+                <div class="divider"></div>
+                <h5>Recommended Center</h5>
+                <div class="col s12 l12">
+                    <a href="center-details.html">
+                        <div class="row">
+                            <div class="col s12 l4">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col s12 l4">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col s12 l4">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="image/1.jpg">
+                                    </div>
+                                    <div class="card-content" style="color: #333">
+                                        <p style="font-size: 20px">Lighthouse Event Center Small Hall</p>
+                                        <p><i class="material-icons f15">location_on</i>Egbeda, Alimosho, Lagos</p>
+                                        <!--<h5>200</h5>-->
+                                        <!--<small>capacity</small>-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="fixed-action-btn wow zoomIn">
+        <a href="#add_event_modal" class="tooltipped modal-trigger btn-large btn-floating green" data-position="top"
+           data-tooltip="Add Event"><i class="material-icons">add</i>
+        </a>
+        <a href="#edit_center_modal" class="tooltipped modal-trigger btn-large btn-floating green lighten-1" data-position="top"
+           data-tooltip="Add Center"><i class="material-icons">add</i>
+        </a>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="center-align">
+                <p>© 2017, All rights reserved.
+                    <a href="#">Boots Events Manager</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="add_event_modal" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <h4>Create Event</h4>
+        <div class="row">
+            <form class="col s12" id="add-event-form">
+                <div class="row">
+                    <div class="col s6">
+                        <div class="file-field input-field">
+                            <div class="btn">
+                                <span>Upload</span>
+                                <input type="file">
+                            </div>
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text" placeholder="Upload an image here">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="event_title" type="text" class="validate" required>
+                        <label for="event_title">Title</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="location" type="text" class="validate" required>
+                        <label for="location">Location</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="date" type="date" class="validate" required>
+                        <label for="date"></label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="time" type="time" class="validate" required>
+                        <label for="time"></label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="description">Description</label>
+                        <textarea id="description" type="text" class="materialize-textarea validate"
+                                  required></textarea>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect btn-flat">Cancel</a>
+        <a href="#!" class="btn waves-effect green lighten-1">Create</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="edit_center_modal" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <h4><span>Create</span> Center</h4>
+        <div class="row">
+            <form class="col s12" id="edit-center-form">
+                <div class="row">
+                    <div class="col s6">
+                        <div class="file-field input-field">
+                            <div class="btn">
+                                <span>Upload</span>
+                                <input type="file">
+                            </div>
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text" placeholder="Upload an image here">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="event_title" type="text" class="validate" required>
+                        <label for="event_title">Title</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="location" type="text" class="validate" required>
+                        <label for="location">Location</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="date" type="date" class="validate" required>
+                        <label for="date"></label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="time" type="time" class="validate" required>
+                        <label for="time"></label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="description">Description</label>
+                        <textarea id="description" type="text" class="materialize-textarea validate"
+                                  required></textarea>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect btn-flat">Cancel</a>
+        <a href="#!" class="btn waves-effect green lighten-1">Create</a>
     </div>
 </div>
 
@@ -157,7 +376,7 @@
                 this.removeClass('search__pane');
             } // Callback for Modal close
         });
-        $('.parallax').parallax();
+        $('.carousel.carousel-slider').carousel({fullWidth: true});
         $('.tooltipped').tooltip({delay: 50});
         $('.fixed-action-btn').openFAB();
         $('.fixed-action-btn').closeFAB();
