--- a/template/css/app.css
+++ b/template/css/app.css
@@ -73,8 +73,8 @@ nav {
 .search__nav {
   background-color: #fff !important; }
 
-#add_event_modal {
-  width: 40% !important; }
+.carousel .carousel-item {
+  visibility: inherit !important; }
 
 /*main css */
 .blur__fits {
@@ -159,6 +159,15 @@ nav {
 /*center details css */
 .center__details {
   padding: 10px; }
+  .center__details .slider__holdr {
+    width: 100%;
+    max-height: 100%; }
+    .center__details .slider__holdr img {
+      width: 100%; }
+
+.facility__list {
+  columns: 2;
+  column-gap: 10px; }
 
 /*signin css */
 .input-field {
