--- a/template/css/center-css/center.sass
+++ b/template/css/center-css/center.sass
@@ -1,2 +1,14 @@
 .center__details
   @include pad(10px)
+
+  .slider__holdr
+    width: 100%
+    max-height: 100%
+
+    img
+      width: 100%
+
+.facility__list
+  columns: 2
+  column-gap: 10px
+
