--- a/template/index.html
+++ b/template/index.html
@@ -69,197 +69,34 @@
                 <div class="col s12 l4">
                     <div class="card wow fadeInUp">
                         <div class="card-image">
-                            <a href="">
-                                <img src="image/2.jpg">
-                                <span class="card-title">A title for this event</span>
-                            </a>
-                            <a class="btn-floating halfway-fab waves-effect waves-light red tooltipped"
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating activator halfway-fab waves-effect waves-light red tooltipped"
                                data-position="bottom" data-tooltip="share">
                                 <i class="material-icons">share</i>
                             </a>
                         </div>
-                        <div class="card-content activator">
+                        <div class="card-content">
                             <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
-                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos <i
-                                    class="material-icons right pointer">more_vert</i></small>
+                            <div>
+                                <i class="material-icons f15">location_on</i> Muson center, Lagos
+                                <i class="material-icons dropdown-button right pointer" data-activates="dropdown1">more_vert</i>
+                                <!-- Dropdown Structure -->
+                                <ul id="dropdown1" class="dropdown-content">
+                                    <li>
+                                        <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Delete</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4"><a href="">A title for this event</a><i
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
-                                <a class="btn-floating right red tooltipped" data-position="left"
-                                   onclick="confirm('Do you really want to Delete this Event..?')"
-                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
-                                </a>
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 l4">
-                    <div class="card wow fadeInUp">
-                        <div class="card-image">
-                            <img class="activator" src="image/2.jpg">
-                            <span class="card-title">A title for this event</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light amber tooltipped"
-                               data-position="bottom" data-tooltip="share">
-                                <i class="material-icons">share</i>
-                            </a>
-                        </div>
-                        <div class="card-content activator">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
-                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos <i
-                                    class="material-icons right pointer">more_vert</i></small>
-                        </div>
-                        <div class="card-reveal">
-                                             <span class="card-title grey-text text-darken-4">A title for this event<i
-                                                     class="material-icons right">close</i></span>
-                            <small>Here is some more information about this product that is only revealed once clicked
-                                on.
-                                <a class="btn-floating right red tooltipped" data-position="left"
-                                   onclick="confirm('Do you really want to Delete this Event..?')"
-                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
-                                </a>
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 l4">
-                    <div class="card wow fadeInUp">
-                        <div class="card-image">
-                            <img class="activator" src="image/2.jpg">
-                            <span class="card-title">A title for this event</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light green lighten-1 tooltipped"
-                               data-position="bottom" data-tooltip="share">
-                                <i class="material-icons">share</i>
-                            </a>
-                        </div>
-                        <div class="card-content activator">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
-                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos <i
-                                    class="material-icons right pointer">more_vert</i></small>
-                        </div>
-                        <div class="card-reveal">
-                                             <span class="card-title grey-text text-darken-4">A title for this event<i
-                                                     class="material-icons right">close</i></span>
-                            <small>Here is some more information about this product that is only revealed once clicked
-                                on.
-                                <a class="btn-floating right red tooltipped" data-position="left"
-                                   onclick="confirm('Do you really want to Delete this Event..?')"
-                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
-                                </a>
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 l4">
-                    <div class="card wow fadeInUp">
-                        <div class="card-image">
-                            <img class="activator" src="image/2.jpg">
-                            <span class="card-title">A title for this event</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light red tooltipped"
-                               data-position="bottom" data-tooltip="share">
-                                <i class="material-icons">share</i>
-                            </a>
-                        </div>
-                        <div class="card-content activator">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
-                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos <i
-                                    class="material-icons right pointer">more_vert</i></small>
-                        </div>
-                        <div class="card-reveal">
-                                             <span class="card-title grey-text text-darken-4">A title for this event<i
-                                                     class="material-icons right">close</i></span>
-                            <small>Here is some more information about this product that is only revealed once clicked
-                                on.
-                                <a class="btn-floating right red tooltipped" data-position="left"
-                                   onclick="confirm('Do you really want to Delete this Event..?')"
-                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
-                                </a>
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 l4">
-                    <div class="card wow fadeInUp">
-                        <div class="card-image">
-                            <img class="activator" src="image/2.jpg">
-                            <span class="card-title">A title for this event</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light amber tooltipped"
-                               data-position="bottom" data-tooltip="share">
-                                <i class="material-icons">share</i>
-                            </a>
-                        </div>
-                        <div class="card-content activator">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
-                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos <i
-                                    class="material-icons right pointer">more_vert</i></small>
-                        </div>
-                        <div class="card-reveal">
-                                             <span class="card-title grey-text text-darken-4">A title for this event<i
-                                                     class="material-icons right">close</i></span>
-                            <small>Here is some more information about this product that is only revealed once clicked
-                                on.
-                                <a class="btn-floating right red tooltipped" data-position="left"
-                                   onclick="confirm('Do you really want to Delete this Event..?')"
-                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
-                                </a>
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 l4">
-                    <div class="card wow fadeInUp">
-                        <div class="card-image">
-                            <img class="activator" src="image/2.jpg">
-                            <span class="card-title">A title for this event</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light green lighten-1 tooltipped"
-                               data-position="bottom" data-tooltip="share">
-                                <i class="material-icons">share</i>
-                            </a>
-                        </div>
-                        <div class="card-content activator">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
-                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos <i
-                                    class="material-icons right pointer">more_vert</i></small>
-                        </div>
-                        <div class="card-reveal">
-                                             <span class="card-title grey-text text-darken-4">A title for this event<i
-                                                     class="material-icons right">close</i></span>
-                            <small>Here is some more information about this product that is only revealed once clicked
-                                on.
-                                <a class="btn-floating right red tooltipped" data-position="left"
-                                   onclick="confirm('Do you really want to Delete this Event..?')"
-                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
-                                </a>
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 l4">
-                    <div class="card wow fadeInUp">
-                        <div class="card-image">
-                            <img class="activator" src="image/2.jpg">
-                            <span class="card-title">A title for this event</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light red tooltipped"
-                               data-position="bottom" data-tooltip="share">
-                                <i class="material-icons">share</i>
-                            </a>
-                        </div>
-                        <div class="card-content activator">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
-                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos <i
-                                    class="material-icons right pointer">more_vert</i></small>
-                        </div>
-                        <div class="card-reveal">
-                                             <span class="card-title grey-text text-darken-4">A title for this event<i
-                                                     class="material-icons right">close</i></span>
-                            <small>Here is some more information about this product that is only revealed once clicked
-                                on.
-                                <a class="btn-floating right red tooltipped" data-position="left"
-                                   onclick="confirm('Do you really want to Delete this Event..?')"
-                                   data-tooltip="Delete Event"><i class="material-icons">delete</i>
-                                </a>
                             </small>
                         </div>
                     </div>
@@ -336,7 +173,7 @@
                         <h4>Do you want to Manage your Own Event?</h4>
                         <h5>View All Centers</h5>
                         <br/>
-                        <a href="center-details.html" class="btn waves-effect red darken-1">Centers</a>
+                        <a href="centers.html" class="btn waves-effect red darken-1">Centers</a>
                     </div>
                 </div>
             </div>
@@ -363,7 +200,7 @@
 <!-- Modal Structure -->
 <div id="add_event_modal" class="modal modal-fixed-footer">
     <div class="modal-content">
-        <h4>Create Event</h4>
+        <h4><span>Create</span> Event</h4>
         <div class="row">
             <form class="col s12" id="add-event-form">
                 <div class="row">
